DDP-5926 add operator to the list of participants

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -369,7 +369,11 @@
             "ReturnButton": "RETURN HOME"
         },
         "Dashboard": {
-            "Title": "Dashboard"
+            "Title": "Dashboard",
+            "ParticipantsTitle": "Participant Dashboard",
+            "AddParticipant": "Add Participant",
+            "ShowPanel": "Show",
+            "HidePanel": "Hide"
         },
         "Password": {
             "Title": "Please enter the password",
