DDP-6472 add default titles for user and children panel

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -373,7 +373,9 @@
             "ParticipantsTitle": "Participant Dashboard",
             "AddParticipant": "Add Participant",
             "ShowPanel": "Show",
-            "HidePanel": "Hide"
+            "HidePanel": "Hide",
+            "UserLabel": "You",
+            "ChildLabel": "Your child"
         },
         "Password": {
             "Title": "Please enter the password",
