--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -433,8 +433,7 @@
             },
             "StudyRedirect": {
                 "Title": "Your participation",
-                "Text1": "Count Me In has an open project specific to your cancer type.",
-                "Text2": "Use the button below to join the {{study}} and learn more about this existing work.",
+                "Content": "<p>Count Me In has an open project specific to your cancer type.</p><p>Use the button below to join the {{study}} and learn more about this existing work.</p>",
                 "GoToProject": "Go to project",
                 "Cancel": "Cancel"
             }
