--- a/ddp-workspace/projects/ddp-brugada/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-brugada/src/assets/i18n/en.json
@@ -10,6 +10,23 @@
         "Join": "Join the Brugada Project"
       },
       "LogoAlt": "Brugada Project"
+    },
+    "Footer": {
+      "Links": {
+        "Back": "Back to top",
+        "About": "About",
+        "Team": "Our Team",
+        "FAQ": "FAQ"
+      },
+      "Contact": {
+        "Label": "Contact Us",
+        "Email": "<a class=\"link\" href=\"mailto:info@linkmyheart.org\">info@linkmyheart.org</a>",
+        "Phone": "<a class=\"link\" href=\"tel:6177147560\">(617) 714-7560</a>",
+        "Address1": "The Broad Institute of MIT and Harvard",
+        "Address2": "415 Main Street",
+        "Address3": "Cambridge, MA 02142",
+        "Address4": "United States"
+      }
     }
   },
   "Toolkit": {
