DDP-6590 Added changes to text for static pages

--- a/ddp-workspace/projects/ddp-cgc/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-cgc/src/assets/i18n/en.json
@@ -4,7 +4,7 @@
       "Home": "Home",
       "AboutUs": "About Us",
       "LearnMore": "Learn More",
-      "CountMeIn": "Count Me In"
+      "CountMeIn": "Get Started!"
     },
     "Titles": {
       "ToggleNavigation": "Toggle navigation"
@@ -27,10 +27,10 @@
       "Paragraph": "Join a nationwide movement of patients, doctors, and scientists by sharing your existing genetic and medical information, and your voice. Together, our data has the power to accelerate cancer research in a way nothing else can."
     },
     "Mission": {
-      "Paragraph1": "Our Mission: To accelerate progress against cancer by partnering with patients to liberate and share their data for research",
+      "Paragraph1": "Our Mission: To accelerate progress against cancer by partnering with patients to liberate and share their data for research.",
       "Paragraph2": "If you have and/or had cancer and have had a genetic test related to your cancer, please consider partnering with us to create an invaluable resource for cancer researchers, providers, and advocates all over the world.",
-      "Paragraph3": "By saying <b>“Count Me In”</b> you will partner with leading research institutes, hospitals, and patient advocacy groups by sharing your existing genetic and medical record data.",
-      "Button": "Count Me In"
+      "Paragraph3": "By saying, <b>“Get Started!”</b>, you will partner with leading patient advocacy groups, research institutes and hospitals by sharing your existing genetic and medical records.",
+      "Button": "Get Started!"
     },
     "HowProjectWorks": {
       "Title": "Here’s how the project works:",
@@ -38,7 +38,7 @@
         {
           "Icon": "step-1.svg",
           "Title": "Tell us about yourself",
-          "Description": "Click <b>“Count Me In”</b>. We will ask you to confirm a few questions about your cancer and the genetic test you have had done."
+          "Description": "Click <b>“Get Started!”</b>. We will ask you to confirm a few questions about your elegibility."
         },
         {
           "Icon": "step-2.svg",
@@ -56,7 +56,7 @@
     },
     "ContactUs": {
       "Title": "Contact Us!",
-      "Paragraph": "Please reach out to us with any questions, concerns, or project ideas at <span class=\"semibold\">info@cancercollective.org</span> or <span class=\"semibold\">651-229-5806.</span>",
+      "Paragraph": "Please reach out to us with any questions, concerns, or project ideas at <span class=\"semibold\">hello@cancercollective.org</span> or <span class=\"semibold\">651-229-5806</span>",
       "Links": [
         {
           "Href": "https://www.facebook.com/cancergenomecollective",
