DDP-6472 dashboard styling

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -464,10 +464,10 @@
         "CloseButton": "CLOSE",
         "AddButton": "ADD",
         "CancelButton": "CANCEL",
-        "NextButton": "NEXT",
+        "NextButton": "Next",
         "PreviousButton": "PREV",
         "SavingButton": "SAVING",
-        "EditButton": "EDIT",
+        "EditButton": "Edit",
         "CompleteButton": "Edit",
         "ReviewButton": "VIEW",
         "OpenButton": "Open",
