DDP-6472 add small spanish translation

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
@@ -375,7 +375,7 @@
             "ShowPanel": "[ES]Show",
             "HidePanel": "[ES]Hide",
             "UserLabel": "Usted",
-            "ChildLabel": "[ES]Your child"
+            "ChildLabel": "Su hijo(a)"
         },
         "Password": {
             "Title": "Ingrese la contraseña.",
