--- a/ddp-workspace/projects/ddp-cgc/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-cgc/src/assets/i18n/en.json
@@ -83,8 +83,8 @@
   },
   "AboutUsPage": {
     "Title": "About Us",
-    "Paragraph1": "The <b>Cancer Genome Collective</b> is a research study being launched and funded by the <a href=\"https://www.broadinstitute.org\" target=\"_blank\">Broad Institute of MIT and Harvard</a>, a nonprofit academic research institution whose mission is to dramatically accelerate the understanding and treatment of disease. This study is being conducted in collaboration with <a href=\"http://www.dana-farber.org\" target=\"_blank\">Dana-Farber Cancer Institute</a>. With this project, we are exploring a new approach to cancer genetic research in which we partner directly with patients to speed up important discoveries",
-    "Paragraph2": "Over the past decade, the we have uncovered many details about what drives cancer on a genetic and molecular level. These discoveries have led to the development of new therapies that have already revolutionized cancer care. Despite this progress, there is a long way to go.",
+    "Paragraph1": "The <b>Cancer Genome Collective</b> is a research study being launched at Dana-Farber Cancer Institute. With this project, we are exploring a new approach to cancer genetic research, in which we partner directly with patients to speed up important discoveries.",
+    "Paragraph2": "Over the past decade, we have uncovered many details about what drives cancer on a genetic and molecular level. These discoveries have led to the development of new therapies that have already revolutionized cancer care. Despite this progress, there is a long way to go.",
     "Paragraph3": "There is a lot of knowledge currently hidden in existing clinical and genetic data that could propel the next cancer discoveries. We believe that the best way to discover this knowledge is by working with patients to liberate their own data for research use.",
     "Paragraph4": "The overarching goal of this study is to develop a platform that empowers patients to drive research by connecting their genetic and medical record data with researcher from around the world.",
     "List": {
@@ -96,11 +96,11 @@
     },
     "Paragraph5": "To get there, the detailed genetic characterization of many thousands of clinically annotated cancer samples will be required. As many patients are treated in the community setting, where research maybe rare, we are reaching out to patients directly. We are seeking to empower patients to share their previous genetic testing results, from a commercial or academic test, along with their clinical data.",
     "Paragraph6": "Patients will also have the option of consenting to an optional consent, which will entail the patient being contacted if there are clinical trials they may be eligible for. If your patient meets these criteria, and have consented to the optional consent, they will be contacted with further information about how to become part of the clinical trial. In this case, we will make every effort to contact and explain the clinical trial to all treating physicians as well.",
-    "Paragraph7": "On our website (cancergenomecollective.org) patients, who are over 18 and have had a genetic test, will be offered an electronic consent form that explains the risks and benefits of the study and asks for permission to obtain the results of their genetic test and copies of their medical records. For patients who consent, our clinical research team will contact their physicians to request copies of their medical records, which will be reviewed by our study team to confirm eligibility. We will work with patients to obtain their genomic data and to donate it to the Cancer Genome Collective.",
+    "Paragraph7": "On our website (cancercollective.org) patients, who are over 18 and have had a genetic test, will be offered an electronic consent form that explains the risks and benefits of the study and asks for permission to obtain the results of their genetic test and copies of their medical records. For patients who consent, our clinical research team will contact their physicians to request copies of their medical records, which will be reviewed by our study team to confirm eligibility. We will work with patients to obtain their genomic data and to donate it to the Cancer Collective.",
     "Paragraph8": "Genetic data will be linked to de-identified clinical information, and the resulting data are used to identify drivers of tumorigenesis, mechanisms of response and resistance to therapies, and diagnostic, prognostic, and therapeutic biomarkers. The database of clinically annotated genomic information will be shared with the cancer research community. Study updates and discoveries are shared at regular intervals with all patients along with the public.",
     "Paragraph9": "This direct-to-patient approach should be particularly enabling for the identification of patients with rare phenotypes or clinical behavior. This project seeks to establish a patient-researcher partnership to accelerate genomic discoveries and improve outcomes in cancer, and may ultimately serve as a means to build a new clinical and translational research model for all patients with cancer.",
     "Paragraph10": "Please feel free to visit our website: cancergenomecollective.org.",
-    "Box": "If you have any questions or concerns about this study, please reach out to us at <b>info@cancercollective.org</b> or <b>651-229-5806</b>."
+    "Box": "If you have any questions or concerns about this study, please reach out to us at <b>hello@cancercollective.org</b> or <b>651-229-5806</b>."
   },
   "LearnMore": {
     "Title": "Here’s how the project works:",
@@ -108,12 +108,12 @@
       {
         "Letter": "A",
         "Title": "Tell us about yourself.",
-        "Description": "<p>Click <b>“Count Me In”</b>. Confirm that you have and/or have had cancer and select the cancer genetic test that you have had done.</p>"
+        "Description": "<p>Click <b>“Get Started!”</b>. Confirm that you have and/or have had cancer and select the cancer genetic test that you have had done if you kwno it (it's ok if not!).</p>"
       },
       {
         "Letter": "B",
         "Title": "Give us permission to collect your data.",
-        "Description": "<p>We will ask you to fill out an online consent form that requests your permission to obtain copies of your medical records and previously generated cancer genetic data.</p><p>We will also ask you to fill out a short survey about you and your cancer, including your type of cancer and where you received your medical care so we can contact your doctors and hospitals.</p>"
+        "Description": "<p>We will ask you to fill out an online consent form that requests your permission to obtain copies of your medical records and previously generated cancer genetic data. You’ll also consent to be contacted by the study team.</p><p>We will also ask you to fill out a short survey about you and your cancer, including your type of cancer and where you received your medical care so we can contact your doctors and hospitals.</p>"
       },
       {
         "Letter": "C",
@@ -123,7 +123,7 @@
       {
         "Letter": "D",
         "Title": "We will gather your medical record data.",
-        "Description": "<p>We will request your medical records from your physicians and hospitals. We will extract the relevant information aggregate these results. You also have access to these records. If you want a copy of the records we have requested, email info@cancercollective.org and we will send your medical records to you.</p>"
+        "Description": "<p>We will request your medical records from your physicians and hospitals. We will extract the relevant information aggregate these results. You also have access to these records. If you want a copy of the records we have requested, email hello@cancercollective.org and we will send your medical records to you.</p>"
       },
       {
         "Letter": "E",
@@ -138,10 +138,10 @@
       {
         "Letter": "G",
         "Title": "Become an active researcher!",
-        "Description": "<p>We are excited to learn with you! Throughout the project, we will provide all patients with regular updates about the status of the project and information about new studies that we are conducting. We will also share any discoveries from these research projects with you.</p><p>We also encourage you to submit your own research ideas by sending an email to info@cancercollective.org. We will do our best to conquer any research ideas put forward by our patients!</p>"
+        "Description": "<p>We are excited to learn with you! Throughout the project, we will provide all patients with regular updates about the status of the project and information about new studies that we are conducting. We will also share any discoveries from these research projects with you.</p><p>We also encourage you to submit your own research ideas by sending an email to hello@cancercollective.org. We will do our best to conquer any research ideas put forward by our patients!</p>"
       }
     ],
-    "Info": "Please contact us at <b>info@cancercollective.org</b> or <b>651-229-5806</b> with any questions, comments, or suggestions."
+    "Info": "Please contact us at <b>hello@cancercollective.org</b> or <b>651-229-5806</b> with any questions, comments, or suggestions."
   },
   "ErrorPage": {
     "Title": "Something went wrong",
