--- a/ddp-workspace/projects/ddp-brugada/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-brugada/src/assets/i18n/en.json
@@ -105,6 +105,111 @@
           ]
         }
       ]
+    },
+    "FAQ": {
+      "Participants": {
+        "Title": "Frequently Asked Questions<br />for Participants",
+        "Description": "Below are some common questions that we receive from participants, relatives, and community members that are interested. If we have not answered a question of yours, we are happy to connect with you directly. Please contact a study staff member at <a class=\"underlined-link\" href=\"tel:6177147560\">617-714-7560</a>, or email at <a class=\"underlined-link\" href=\"mailto:info@linkmyheart.org\">info@linkmyheart.org</a>.",
+        "Questions": [
+          {
+            "Name": "What is the rationale for this project?",
+            "Answers": [
+              "Brugada syndrome can cause abnormal heart rhythms that can be dangerous and life threatening. The causes of the condition and the best methods for treating it are not well understood; as such, there is a critical need to understand the underlying causes for this condition.",
+              "Brugada syndrome is also rare, making it difficult to study. Our motivation for this project is to empower patients throughout North America to help advance our understanding of the condition. We will do so by creating an easy and convenient opportunity for patients to participate in research relevant to Brugada syndrome.",
+              "The ultimate goal is to improve our understanding of the medical and genetic aspects of patients with Brugada syndrome. We hope to achieve this by connecting the data of many patients with this condition throughout the United States and Canada."
+            ]
+          },
+          {
+            "Name": "What will I be asked to do for this project?",
+            "Answers": [
+              "We will first ask you to complete a brief online survey to help us learn more about you, and your diagnosis. You will then be asked to complete an online consent form that provides us with permission to request copies of your medical records from your healthcare providers. We will need you to provide the names of the hospitals or clinics, as well as the name of your cardiologist(s) that you’ve seen, so we know where to request your information.",
+              "We will also send you a saliva collection kit. From your sample, we will extract your DNA and study it through genotyping or whole genome or exome sequencing, which involves reading through all the letters of your DNA to look for changes that may be causing disease. Studying your DNA may allow us to discover new genes that cause Brugada syndrome, or to better understand the genetic changes that are present in patients with this condition.",
+              "You also have the opportunity to participate in optional surveys to help us answer important research questions relevant for your inherited heart rhythm condition."
+            ]
+          },
+          {
+            "Name": "Can I receive my genetic data as a result of participating in this project?",
+            "Answers": [
+              "The type of genetic testing we are performing is research based. Research based testing is different from the genetic testing ordered by your provider, and is not useful in informing clinical care. As a result, we will not be returning your genetic data to you."
+            ]
+          },
+          {
+            "Name": "Who will have access to the data that I provide?",
+            "Answers": [
+              "Your genetic data, as well as any medical records we receive will be deidentified before we share with other researchers. This means information that could easily identify you such as name and date of birth will be removed before sharing.  The deidentified medical and genetic data may be requested and shared with other clinical or biomedical researchers who are interested in studying the clinical and genetic aspects of Brugada syndrome.",
+              "Your genetic and medical data will be centrally stored on secure servers at the Broad Institute and Massachusetts General Hospital. Only clinical and biomedical researchers that have been approved will have access to this identifiable data. When sharing data with other researchers, only deidentified medical and genetic information will be shared."
+            ]
+          },
+          {
+            "Name": "What benefits are there to participating in this project?",
+            "Answers": [
+              "By participating, you will be contributing to discoveries on the clinical and genetic aspects of Brugada syndrome that may benefit individuals with this condition as a whole. However, there are no direct benefits to you for participating in this project. If interested, you may receive notice about publications based off of data collected for this project.",
+              "We may also share research progress and discoveries, in aggregate, which you can access by signing up for our mailing list or checking our website. You will not receive your genetic data as a result from the study."
+            ]
+          },
+          {
+            "Name": "What resources are out there?",
+            "Answers": [
+              "The Sudden Arrhythmia Death Syndromes Foundation (SADS) is a patient advocacy non-profit whose mission is “to save the lives and support the families of children and adults who are genetically predisposed to sudden death due to heart rhythm abnormalities”. SADS offers patient and family support services, physician and health professional education, raises public awareness about the risks of cardiac arrhythmias, engages in advocacy, and encourages research into conditions that lead to sudden cardiac death. You can learn more about their work and sign up for their mailing list at <a class=\"underlined-link\" target=\"_blank\" href=\"https://www.sads.org\">www.StopSADS.org</a>."
+            ]
+          },
+          {
+            "Name": "Are there any costs for me to participate in this project?",
+            "Answers": [
+              "No. All costs associated (request of records, mailing, sample collection and others) will be covered by the study."
+            ]
+          },
+          {
+            "Name": "Can I withdraw my participation from this project at anytime?",
+            "Answers": [
+              "Yes. You may withdraw from this study if you decide to change your mind in the future. Your genetic and medical data will not be included in any additional research studies moving  forward, and your information, including records and genetic data, will be destroyed."
+            ]
+          },
+          {
+            "Name": "Is there information that I can bring to my doctor so that I can discuss this study with them?",
+            "Answers": [
+              "Yes, you can print out or use your mobile device to share the documents <a class=\"underlined-link\" target=\"_blank\" href=\"/assets/pdf/for-physicians-07-20.pdf\">here</a>."
+            ]
+          },
+          {
+            "Name": "How do I mail back my saliva kit if I live in the USA?",
+            "Answers": [
+              "The saliva kit will have a prepaid return shipping label already on the outside of the box. The saliva kit can be mailed at your nearest USPS location. <span class=\"text-bold\">All costs associated with the project, including shipping, are paid in advance by the study -- there will be no cost to you.</span>"
+            ]
+          },
+          {
+            "Name": "How do I mail back my saliva kit if I live in Canada?",
+            "Answers": [
+              "1. Before returning your saliva kit, please place the included commercial invoice label on the front of the box (it is okay to cover up the logo).",
+              "2. Drop your kit off at a FedEx location or FedEx dropbox if preferred. The saliva kit already has a prepaid return shipping label on the back of the box. <span class=\"text-bold\">All costs associated with the project, including shipping, are paid in advance by the study--there will be no cost to you.</span>"
+            ]
+          }
+        ]
+      },
+      "Community": {
+        "Title": "Frequently Asked Questions<br />for Relatives and the Community",
+        "Questions": [
+          {
+            "Name": "My family members also have Brugada syndrome. Can they participate in this project?",
+            "Answers": [
+              "Yes. We would be enthusiastic to include your relatives that have been diagnosed with Brugada syndrome as part of our study. Please ask them to fill out the initial survey, and they will also be asked to fill out a consent form to allow us to request their records, as well as mail a saliva kit to them."
+            ]
+          },
+          {
+            "Name": "My family member with Brugada syndrome has passed away, and there is postmortem tissue available. Can I participate on behalf of this family member?",
+            "Answers": [
+              "We cannot currently obtain medical records or tissue samples for individuals who have passed away. We may have future plans for next-of-kin process, but this will take time to develop. If you later become diagnosed with Brugada syndrome, we would be interested in having you participate in our project."
+            ]
+          },
+          {
+            "Name": "I don’t have Brugada syndrome, but I was diagnosed with another inherited heart rhythm condition. Can I still participate?",
+            "Answers": [
+              "We are happy to hear your interest! But for the first phase of our project, we are only recruiting patients who have been diagnosed with Brugada syndrome. However, we expect to recruit patients with other inherited heart rhythm conditions in the future.",
+              "If you are interested in participating in a future project that is specifically related to your inherited heart condition, please consider checking our website periodically or signing up for our mailing list as we will update these when future projects become available."
+            ]
+          }
+        ]
+      }
     }
   },
   "Toolkit": {
