--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -363,6 +363,16 @@
         }
     },
     "Toolkit": {
+        "AgeUpThankYou": {
+            "Title": "Thank you!",
+            "EmailVerified": "Your email address has been verified. We will be sending an email with more information on re-consent shortly after your birthday.",
+            "EmailCollected": {
+                "TextPt1": "An email will be sent to your child to confirm their address and tell them about the upcoming re-consent process. If you need to change the email you provided for your child, please contact the project team at",
+                "TextPt2": "or",
+                "Button": "Go to Dashboard"
+            },
+            "ImageAlt": "Email sent"
+        },
         "StayInformed": {
             "Title": "Stay Informed!",
             "Text": "Thank you for joining the email list. We'll send you updates and keep you informed. You can unsubscribe at any time. If you have any questions about your status in the project, please email ",
